<resources>
    <string name="app_name">Perf Store</string>
    <string name="welcome_to_perf_store">Welcome to Perf Store !</string>
    <string name="enter_perfume_name">Enter Perfume Name</string>
    <string name="show_only_discounted">Show only discounted</string>
    <string name="for_females">For Females</string>
    <string name="for_males">For Males</string>
    <string name="search">Search</string>
    <string name="view_cart">View Cart</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="gender">Gender</string>
    <string name="quantity">Quantity</string>
    <string name="offer">Offer</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>