<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#493B3B"

    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="356dp"
        android:layout_height="242dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/textView"
        style="@style/style1"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="32dp"
        android:text="@string/welcome_to_perf_store"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spnBrands"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_goneMarginTop="15dp" />

    <Spinner
        android:id="@+id/spnBrands"
        style="@style/style1"
        android:layout_marginStart="146dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="147dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="251dp"
        android:layout_height="59dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="84dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnBrands">

        <RadioButton
            android:id="@+id/rbtnMale"
            style="@style/style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"

            android:text="@string/for_males" />

        <RadioButton
            android:id="@+id/rbtnFemale"
            style="@style/style1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:text="@string/for_females" />

    </RadioGroup>

    <EditText
        android:id="@+id/txtPerfume"
        style="@style/style1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="103dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="99dp"
        android:ems="10"
        android:hint="@string/enter_perfume_name"
        android:inputType="text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <CheckBox
        android:id="@+id/chkDiscount"
        style="@style/style1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="95dp"
        android:text="@string/show_only_discounted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPerfume" />

    <Button
        android:id="@+id/btnSearch"
        style="@style/style1"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="147dp"
        android:backgroundTint="#0F0C0C"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkDiscount" />

</androidx.constraintlayout.widget.ConstraintLayout>
